Information section completed

--- a/index.html
+++ b/index.html
@@ -35,39 +35,50 @@
         </div>
     </div>
 
-    <!-- <div class="information">
-        <p>
-            SOme Random Info
+    <div class="information">
+        <p class="info">
+            Some Random Info
         </p>
 
         <div class="container">
             <div class="card">
-                <img src="#" alt="image">
+                <div class="image">
+                    <img src="#" alt="image">
+                    </div>
                 <p class="details">
+                    this is a subtext illustrating about the image
+
+                </p>
+            </div>
+            <div class="card"> 
+                <div class="image">
+                <img src="#" alt="image">
+                </div>
+                <p class="details">
+                    this is a subtext illustrating about the image
+                </p>
+            </div>
+            <div class="card">
+                <div class="image">
+                    <img src="#" alt="image">
+                    </div>
+                <p class="details">
+                    this is a subtext illustrating about the image
 
                 </p>
             </div>
             <div class="card">
-                <img src="#" alt="image">
+                <div class="image">
+                    <img src="#" alt="image">
+                    </div>
                 <p class="details">
-
-                </p>
-            </div>
-            <div class="card">
-                <img src="#" alt="image">
-                <p class="details">
-
-                </p>
-            </div>
-            <div class="card">
-                <img src="#" alt="image">
-                <p class="details">
+                    this is a subtext illustrating about the image
 
                 </p>
             </div>
         </div>
     </div>
-
+<!--
     <div class="quote">
         <p class="lines">
             This is an Inspiring quote from someone......
