Web Page Created
Web page has been create, the elements eeds to be adjusted according to the viewport.

--- a/index.html
+++ b/index.html
@@ -78,34 +78,39 @@
             </div>
         </div>
     </div>
-<!--
+
     <div class="quote">
-        <p class="lines">
+        <div class="lines">
             This is an Inspiring quote from someone......
-        </p>
-        <p class="author">
-            Divyam, Software Developer
-        </p>
-    </div>
-
-    <div class="sign-up">
-        <div>
-            <p class="heading">
-                Call to action, it's time!
+            This is an Inspiring quote from someone......
+            This is an Inspiring quote from someone......
+            This is an Inspiring quote from someone......
+        
+            <p class="author">
+                -Divyam, Software Developer
             </p>
-            <p class="sub-text">
-                Sign up for our product!
-            </p>
-            <button>
-                Sign Up!
-            </button>
         </div>
+        
     </div>
-
+        <div class="section-4">
+            <div class="sign-up">
+                <div class="heading">
+                    <p style="font-weight: 700; font-size: large;">   
+                        Call to action, it's time!
+                    </p>
+                    <p>
+                        Sign up for our product!
+                    </p>
+                </div>
+                <div class="button">
+                        <a href="#">Sign Up</a>
+                </div>
+            </div>
+        </div>    
     <footer>
         <p>
             CopyRight @ Divyam Juneja 2023
         </p>
-    </footer> -->
+    </footer> 
 </body>
 </html>
