--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>    
     <footer>
         <p>
-            CopyRight @ The Odin Project 2023
+            Divyam Juneja Prototype
         </p>
     </footer> 
 </body>
